--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "dplayer": "^1.25.0",
     "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
