--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
